# stellar-insights

./: .gitignore  .secrets.baseline  BUG_FIX_SUMMARY.txt  CHANGES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_1480_1483.md  ISSUE_1564_FIX_VERIFICATION.md  ISSUE_UPDATE_STATUS.md  MOBILE_AND_ISSUES_SUMMARY.md  PWA_DELIVERABLES.md  PWA_FINAL_REPORT.md  PWA_IMPLEMENTATION_SUMMARY.md  README.md  README_PWA.md  index.html
.github/: dependabot.yml
backend/: .env.example  Cargo.toml  seed_data.sh
contracts/: Cargo.toml
contracts/analytics/src/: errors.rs  lib.rs
contracts/benches/: Cargo.toml
contracts/benches/benches/: contract_benchmarks.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: errors.rs  events.rs  lib.rs  test.rs
contracts/governance/: Cargo.toml
contracts/governance-voting/: Cargo.toml
contracts/governance-voting/src/: errors.rs  events.rs  lib.rs  test.rs
contracts/governance/src/: fuzz_tests.rs  lib.rs
contracts/multi-sig-wallet/: Cargo.toml
contracts/multi-sig-wallet/src/: errors.rs  events.rs  lib.rs  test.rs
contracts/stellar_insights/src/: errors.rs  lib.rs
contracts/tests/: Cargo.toml
contracts/time-locked-transactions/: Cargo.toml
contracts/time-locked-transactions/src/: errors.rs  events.rs  lib.rs  test.rs
contracts/token-swap/: Cargo.toml
contracts/token-swap/src/: errors.rs  events.rs  lib.rs  test.rs
contracts/upgrade/: Cargo.toml
contracts/upgrade/src/: lib.rs
docs/: ARCHITECTURE_ISSUES_AND_RECOMMENDATIONS.md  COMPILATION_FIXES_NEEDED.md  GAS_COSTS.md  ISSUES_CREATED.md  ISSUE_MANAGEMENT_GUIDE.md  PERFORMANCE.md  security.md
elk/: ilm-policy.json
frontend/: PWA_IMPLEMENTATION.md  PWA_QUICK_START.md  QUICK_REFERENCE.md  SAFARI_CHART_FIX.md  SAFARI_FIX_INDEX.md  VERIFICATION_CHECKLIST.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
issues/: SAMPLE_BACKEND_ISSUE.md  SAMPLE_MOBILE_ISSUE.md  SAMPLE_SDK_ISSUE.md
k8s/: network-policy.yaml
mobile/: .env.example  .eslintrc.js  README.md  (+9 more)
sdk/python/: pyproject.toml
sdk/python/stellar_insights/: __init__.py  http.py  resources.py  types.py
sdk/python/tests/: test_client.py
(+405 files in other folders)
