[workspace]
resolver = "2"
members = [
  "stellar_insights",
  "analytics",
  "benches",
  "access-control",
  "governance",
  "escrow",
  "governance-voting",
  "multi-sig-wallet",
  "time-locked-transactions",
  "token-swap",
  "upgrade",
  "tests",
]

# Clippy linting configuration for all contracts
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
soroban-sdk = "26.0.1"
soroban-token-sdk = "26.0.1"

# Release and bench profiles must stay in this workspace root only. Cargo ignores
# `[profile.*]` in member crates (e.g. access-control, stellar_insights, governance)
# and prints: "profiles for non-root package will be ignored".

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
debug = false

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
