[package]
name = "contract-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration"
path = "integration/mod.rs"
required-features = ["testnet-integration"]

[features]
testnet-integration = []

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
analytics = { path = "../analytics" }
governance = { path = "../governance" }
escrow = { path = "../escrow" }
stellar-insights = { path = "../stellar_insights" }
