[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stellar-insights"
version = "1.0.0"
description = "Official Python SDK for the Stellar Insights API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "respx==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
